--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="icon" type="image/svg+xml" href="/oksisi.svg" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>${name}</title>
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://simsag.github.io" />
+    <meta property="og:title" content="OKSISI" />
+    <meta property="og:description" content="박예빈의 자기소개 페이지입니다." />
+    <meta property="og:image" content="/oksisi.jpg" />
+    <meta property="og:site_name" content="OKSISI" />
+    <title>OKSISI</title>
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -252,7 +259,7 @@
       <div class="row align-items-center">
         <div class="col-lg-4">
           <img
-            src="bear.jpg"
+            src="oksisi.jpg"
             alt="프로필 사진"
             class="profile-img animated-img"
           />
@@ -317,8 +324,7 @@
           <input type="text" id="todo-input" placeholder="할 일을 입력하세요" />
           <button id="add-todo-btn">추가</button>
         </div>
-        <ul id="todo-items" class="todo-items">
-        </ul>
+        <ul id="todo-items" class="todo-items"></ul>
       </div>
     </section>
 
