--- a/index.html
+++ b/index.html
@@ -345,6 +345,11 @@
     </section>
 
     <!-- Scripts -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    
+    <!-- Scripts -->
     <script>
       const todoInput = document.getElementById("todo-input");
       const addTodoBtn = document.getElementById("add-todo-btn");
