--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://simsag.github.io" />
+    <meta property="og:url" content="https://simsag.github.io.test" />
     <meta property="og:title" content="OKSISI" />
     <meta property="og:description" content="박예빈의 자기소개 페이지입니다." />
     <meta property="og:image" content="/oksisi.jpg" />
